--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -99,7 +99,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="inline-block px-5 scroll-page font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+                data-scroll-nav="0" href="#suggest" rel="nofollow">Suggest</a>
             </div>
 
             <!-- upcoming events -->
@@ -131,7 +131,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="inline-block px-5 scroll-page font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+                data-scroll-nav="0" href="#suggest" rel="nofollow">Suggest</a>
             </div>
             <!-- ongoing events -->
             <% } else if(title === "E-Cell | Ongoing Events") { %> 
@@ -162,7 +162,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="inline-block scroll-page px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+                data-scroll-nav="0" href="#suggest" rel="nofollow">Suggest</a>
             </div>
             <% } else if(title === "E-Cell | Archived Events") { %> 
               <div
@@ -192,7 +192,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="inline-block px-5 scroll-page font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+                data-scroll-nav="0" href="#suggest" rel="nofollow">Suggest</a>
             </div>
             <% } else if(title === "E-Cell | Events") { %>
               <div
@@ -262,7 +262,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="scroll-page inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#event-registration">Join Us</a>
+                data-scroll-nav="0" href="#event-registration">Register</a>
             </div>
             <% } else if (title === "E-Cell | Departments") { %>
               <div
@@ -283,7 +283,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="scroll-page inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#internship">Internship</a>
+                data-scroll-nav="0" href="#subscribe">Subscibe</a>
             </div>
             <% } else if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %>
             <div
