--- a/views/layouts/home/sections/suggest-event.ejs
+++ b/views/layouts/home/sections/suggest-event.ejs
@@ -1,4 +1,4 @@
-<div class="px-6 pt-3 pb-5 mb-10 bg-white rounded-lg shadow-2xl md:px-12 subscribe-area wow fadeIn"
+<div class="px-6 pt-3 pb-5 mb-10 mt-12 bg-white rounded-lg shadow-2xl md:px-12 subscribe-area wow fadeIn"
   data-wow-duration="1s" data-wow-delay="0.5s">
   <div class="flex flex-col justify-center items-center">
     <div class="w-full lg:w-1/2">
