Department page render dynamic data

--- a/views/layouts/home/sections/about-us.ejs
+++ b/views/layouts/home/sections/about-us.ejs
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="w-full lg:w-1/2">
-            <div class="mx-3 lg:mr-0 lg:ml-3 wow fadeInRight" data-wow-delay="0.3s">
+            <div class="mx-3 lg:mr-0 lg:ml-3">
               <img src="/img/department_feature.svg" alt="">
             </div>
           </div>
