--- a/views/layouts/home/sections/vision.ejs
+++ b/views/layouts/home/sections/vision.ejs
@@ -8,7 +8,7 @@
         <!-- <div class="line"></div> -->
         <h3 class="text-4xl font-bold  w-3/4 text-center border-t-4 border-red-400 pt-4 text-black ml-7">Vision</h3>
       </div>
-      <p class="mb-8 ml-7 leading-relaxed">
+      <p class="mb-8 md:ml-7 leading-relaxed">
         <% if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %> 
         <%= foundDept.description %>
         <% } else if (title === "E-Cell | Home") { %>
