--- a/views/layouts/home/sections/magazine-form.ejs
+++ b/views/layouts/home/sections/magazine-form.ejs
@@ -1,5 +1,5 @@
 <!-- Magazine Section -->
-<div class="px-6 pt-5 pb-5 mb-10 bg-white rounded-lg shadow-xl md:px-12 subscribe-area wow fadeIn"
+<div class="px-6 pt-5 pb-5 mb-20 md:mb-0 mt-10 bg-white rounded-lg shadow-xl md:px-12 subscribe-area wow fadeIn"
 data-wow-duration="1s" data-wow-delay="0.5s">
 <div class="flex flex-col justify-center items-center">
   <div class="w-full lg:w-1/2">
