--- a/views/layouts/dashboard/sections/messages.ejs
+++ b/views/layouts/dashboard/sections/messages.ejs
@@ -30,12 +30,15 @@
                 <div
                   class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
                   <div class="flex-grow flex-row md:flex justify-between items-center">
+                    <% if (staff.role !== "member") { %> 
                     <div class="self-center">
                       <span
                         class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
                         style="outline: none;">
                         <%= contactMessage.name %>
-                      </span> contacted you with <a
+                      </span>
+                      contacted you with 
+                      <a
                         class="font-medium text-gray-800 dark:text-gray-50 dark:hover:text-gray-100"
                         href="mailto:<%= contactMessage.email %>" style="outline: none;">
                         <%= contactMessage.email %>
@@ -52,6 +55,16 @@
                           </svg></span>
                       </a>
                     </div>
+                    <% } else { %>
+                      <div class="self-center">
+                        <span
+                          class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
+                          style="outline: none;">
+                          <%= contactMessage.name %>
+                        </span>
+                        contacted via contact form
+                      </div>
+                      <% } %> 
                   </div>
                 </div>
               </li>
@@ -84,12 +97,15 @@
                   <div
                     class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
                     <div class="flex-grow flex-row md:flex justify-between items-center">
+                      <% if (staff.role !== "member") { %> 
                       <div class="self-center">
                         <span
                           class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
                           style="outline: none;">
                           <%= contactMessage.name %>
-                        </span> contacted you with <a
+                        </span>
+                        contacted you with 
+                        <a
                           class="font-medium text-gray-800 dark:text-gray-50 dark:hover:text-gray-100"
                           href="mailto:<%= contactMessage.email %>" style="outline: none;">
                           <%= contactMessage.email %>
@@ -106,6 +122,16 @@
                             </svg></span>
                         </a>
                       </div>
+                      <% } else { %>
+                        <div class="self-center">
+                          <span
+                            class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
+                            style="outline: none;">
+                            <%= contactMessage.name %>
+                          </span>
+                          contacted via contact form
+                        </div>
+                        <% } %> 
                     </div>
                   </div>
                 </li>
@@ -141,30 +167,41 @@
                 <div
                   class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
                   <div class="flex-grow flex-row md:flex justify-between items-center">
+                    <% if (staff.role !== "member") { %> 
                     <div class="self-center">
                       <span
                         class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
                         style="outline: none;">
                         <%= internshipMessage.name %>
-                      </span> filled the internship form <a
+                      </span>
+                      has filled the internship form with  
+                      <a
                         class="font-medium text-gray-800 dark:text-gray-50 dark:hover:text-gray-100"
                         href="mailto:<%= internshipMessage.email %>" style="outline: none;">
                         <%= internshipMessage.email %>
                       </a>
                     </div>
-                    <div class="flex-shrink-0 md:mt-0 mt-5 ml-2">
+                    <div class="flex-shrink-0 ml-2 mt-5 md:mt-0">
                       <a class="flex items-center font-medium text-blue-500 hover:text-blue-600 dark:text-blue-400 dark:hover:text-blue-500"
-                        href="/dashboard/internship-applications/<%= internshipMessage.id %>" style="outline: none;">
-                        View
-                        <span><svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor"
+                        href="/dashboard/contact-messages/<%= internshipMessage.id %>" style="outline: none;">
+                        View<span><svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor"
                             class="transform transition-transform duration-500 ease-in-out">
                             <path fill-rule="evenodd"
                               d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                               clip-rule="evenodd"></path>
-                          </svg>
-                        </span>
+                          </svg></span>
                       </a>
                     </div>
+                    <% } else { %>
+                      <div class="self-center">
+                        <span
+                          class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
+                          style="outline: none;">
+                          <%= internshipMessage.name %>
+                        </span>
+                        has filled the internship form
+                      </div>
+                      <% } %> 
                   </div>
                 </div>
               </li>
@@ -193,12 +230,15 @@
               <div
                 class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
                 <div class="flex-grow flex-row md:flex justify-between items-center">
+                  <% if (staff.role !== "member") { %> 
                   <div class="self-center">
                     <span
                       class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
                       style="outline: none;">
                       <%= internshipMessage.name %>
-                    </span> filled the internship form <a
+                    </span>
+                    has filled the internship form with  
+                    <a
                       class="font-medium text-gray-800 dark:text-gray-50 dark:hover:text-gray-100"
                       href="mailto:<%= internshipMessage.email %>" style="outline: none;">
                       <%= internshipMessage.email %>
@@ -206,18 +246,25 @@
                   </div>
                   <div class="flex-shrink-0 ml-2 mt-5 md:mt-0">
                     <a class="flex items-center font-medium text-blue-500 hover:text-blue-600 dark:text-blue-400 dark:hover:text-blue-500"
-                      href="/dashboard/internship-applications/<%= internshipMessage.id %>" style="outline: none;">
-                      View
-                      <span>
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor"
+                      href="/dashboard/contact-messages/<%= internshipMessage.id %>" style="outline: none;">
+                      View<span><svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor"
                           class="transform transition-transform duration-500 ease-in-out">
                           <path fill-rule="evenodd"
                             d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                             clip-rule="evenodd"></path>
-                        </svg>
-                      </span>
+                        </svg></span>
                     </a>
                   </div>
+                  <% } else { %>
+                    <div class="self-center">
+                      <span
+                        class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
+                        style="outline: none;">
+                        <%= internshipMessage.name %>
+                      </span>
+                      has filled the internship form
+                    </div>
+                    <% } %> 
                 </div>
               </div>
             </li>
