--- a/views/layouts/dashboard/department.ejs
+++ b/views/layouts/dashboard/department.ejs
@@ -52,9 +52,12 @@
         function handleForm(ev) {
             ev.preventDefault();
             let myForm = ev.target;
+            const newFormData = convertFD2JSON(new FormData(myForm));
+            newFormData.featured === "on" ? newFormData.featured = true : newFormData.featured = false;
+            console.log(newFormData);
             // after banckend chnage update this
             fetch("/dashboard/department/<%= deptId %>/edit", {
-                body: JSON.stringify(convertFD2JSON(new FormData(myForm))),
+                body: JSON.stringify(newFormData),
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
