--- a/views/layouts/dashboard/sections/member-table.ejs
+++ b/views/layouts/dashboard/sections/member-table.ejs
@@ -355,9 +355,7 @@
               <td class="px-4 py-3">
                 <div class="flex items-center text-sm">                   
                   <div>
-                    <p class="font-semibold select-all">
-                      <%= key.key %>
-                    </p>
+                    <p class="font-semibold select-all"><%= key.key %></p>
                   </div>
                 </div>
               </td>
