Key bug resolved - #2

--- a/views/layouts/dashboard/sections/key-gen.ejs
+++ b/views/layouts/dashboard/sections/key-gen.ejs
@@ -4,9 +4,7 @@
       <div class="text-center">
         <span class="text-red-600 dark:text-red-500 font-bold">ALERT: </span>Copy this key. It will be removed, when the page is refereshed.
       </div>
-      <div class="mx-4 select-all text-xl mt-3 py-5 px-3 bg-gray-900 text-green-200 dark:text-green-300 border-4 rounded border-red-500 text-center">
-        <%= key %>
-      </div>
+      <div class="mx-4 select-all text-xl mt-3 py-5 px-3 bg-gray-900 text-green-200 dark:text-green-300 border-4 rounded border-red-500 text-center"><%= key %></div>
     </div>
   <% } %> 
   <div
