department members cards and organizers, sponsers, hosts cards fixed

--- a/views/layouts/home/event-landing.ejs
+++ b/views/layouts/home/event-landing.ejs
@@ -29,9 +29,9 @@
   <footer id="footer" class="relative z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
     <div class="container">
+      <!-- Event Registration -->
       <%- include("./sections/event-registration.ejs") %> 
-      <!-- Newsletter Section -->
-      <!-- Newsletter Section -->
+    <!-- Event Registration -->
       
       <!-- Footer Links -->
       <%- include("./sections/footer-links.ejs") %> 
