Critical login bug fixed - #2

--- a/views/layouts/auth/staff-register.ejs
+++ b/views/layouts/auth/staff-register.ejs
@@ -119,7 +119,7 @@
                                     rounded
                                     focus:outline-none
                                     focus:bg-white
-                                " type="name" placeholder="URL" required name="profile_pic_url" />
+                                " type="name" placeholder="URL" name="profile_pic_url" />
                                 </div>
 
                                 <div class="mt-2">
