bug fixes changes

--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -108,7 +108,9 @@
 
 
 <!-- Active Members -->
-            <div class="w-full flex justify-center  items-center text-4xl font-bold mt-20">Active Team Members</div>
+            <div class="w-full flex justify-center  items-center text-4xl font-bold mt-20">
+            <div>Team Members</div>
+            </div>
             
             <!-- Kumar Abhinav -->
             <div class="w-full md:w-1/3 h-2/3 p-6 flex flex-col flex-grow flex-shrink cursor-pointer">
