--- a/views/layouts/home/sections/feedback-form.ejs
+++ b/views/layouts/home/sections/feedback-form.ejs
@@ -13,10 +13,10 @@
             <div id="internship" class="mt-8 subscribe-form">
                 <form class="relative focus:outline-none space-y-5">
                     <input type="text" name="name"
-                        class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
+                        class="w-full relative py-4 pl-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
                         id="name" placeholder="Your Name">
                     <input type="email" name="email" placeholder="Enter email"
-                        class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
+                        class="w-full relative py-4 pl-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
                     <textarea name="message"
                         class="w-full h-44 resize-none relative py-4 px-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
                         id="description" maxlength="200" placeholder="Tell us your views..."></textarea>
