--- a/views/layouts/dashboard/sections/external-links.ejs
+++ b/views/layouts/dashboard/sections/external-links.ejs
@@ -14,7 +14,7 @@
           </a>
         </li>
         <li class="mt-2">
-          <a class="flex items-center text-blue-700 dark:text-gray-100" href="departments" target="_blank">
+          <a class="flex items-center text-blue-700 dark:text-gray-100" href="/departments" target="_blank">
             <svg width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor"
               class="transform transition-transform duration-500 ease-in-out">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -24,7 +24,7 @@
           </a>
         </li>
         <li class="mt-2">
-          <a class="flex items-center text-blue-700 dark:text-gray-100" href="/event-create-101" target="_blank">
+          <a class="flex items-center text-blue-700 dark:text-gray-100" href="/events" target="_blank">
             <svg width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor"
               class="transform transition-transform duration-500 ease-in-out">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
