--- a/views/layouts/home/sections/features.ejs
+++ b/views/layouts/home/sections/features.ejs
@@ -20,9 +20,7 @@
           </div>
           <div class="mt-8 services-content">
             <h4 class="mb-8 text-xl font-bold text-gray-900">Events</h4>
-            <p class="mb-8">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
-              tempor
-              invidunt labore.</p>
+            <p class="mb-8">All upcoming events, webinars and activities with their dates, details and enrollment procedures can be found under this</p>
             <a class="duration-300 hover:text-purple-600" href="/events">Learn More <i
                 class="ml-2 lni lni-chevron-right"></i></a>
           </div>
@@ -37,9 +35,8 @@
           </div>
           <div class="mt-8 services-content">
             <h4 class="mb-8 text-xl font-bold text-gray-900">Departments</h4>
-            <p class="mb-8">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
-              tempor
-              invidunt labore.</p>
+            <p class="mb-8">E-Cell offers various Departments for you to explore and work in them by 
+              flaunting your skills and creativity.</p>
             <a class="duration-300 hover:text-red-600" href="/departments">Explore <i
                 class="ml-2 lni lni-chevron-right"></i></a>
           </div>
@@ -54,9 +51,7 @@
           </div>
           <div class="mt-8 services-content">
             <h4 class="mb-8 text-xl font-bold text-gray-900">Staff Dashboard</h4>
-            <p class="mb-8">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
-              tempor
-              invidunt labore.</p>
+            <p class="mb-8">This is for college faculty members to login at their ends</p>
             <a class="duration-300 hover:text-blue-600" href="/dashboard">Visit <i
                 class="ml-2 lni lni-chevron-right"></i></a>
           </div>
