--- a/views/layouts/home/event-landing.ejs
+++ b/views/layouts/home/event-landing.ejs
@@ -16,14 +16,14 @@
   <!-- timeline -->
   <%- include("./sections/event-timeline.ejs") %> 
  
+  <!-- hosts -->
+  <%- include("./sections/event-hosts.ejs") %> 
+  <!-- sponsors -->
+  <%- include("./sections/event-sponsors.ejs") %> 
   <!-- organizers -->
   <%- include("./sections/event-organizers.ejs") %> 
 
-   <!-- sponsers -->
-   <%- include("./sections/event-sponsors.ejs") %> 
 
-    <!-- hosts -->
-    <%- include("./sections/event-hosts.ejs") %> 
 
   <!-- Footer Section -->
   <footer id="footer" class="relative z-10 footer-area pt-2">
