--- a/views/layouts/home/sections/home-about-us.ejs
+++ b/views/layouts/home/sections/home-about-us.ejs
@@ -7,13 +7,12 @@
             <div class="line"></div>
             <h3 class="text-4xl font-bold">About<span class="font-normal"> Us</span></h3>
           </div>
-          <p class="mb-8">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod
-            tempor invidunt
-            ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-            duo dolores et
-            ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Lorem ipsum
-            dolor sit amet, consetetur sadipscing.</p>
+          <p class="mb-8">The Entrepreneurship Cell (E-Cell) GNDEC  was initiated in September 2020 with a 
+            vision to promote ‘Entrepreneurship’ among the students of GNDEC, Ludhiana and to build an 
+            exhaustive resource pool to aid potential student entrepreneurs. The Entrepreneurship Cell 
+            (E-Cell) is a non-profit organization run by students of GNDEC,Ludhiana. We aim manifesting 
+            the latent entrepreneurial spirit of young students and corporate. We at E-Cell host various
+             workshops,speaker sessions, competitions and innovation event for aspiring entrepreneurs.</p>
           <!-- <a href="javascript:void(0)"
             class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-3  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500">Know
             More</a> -->
