--- a/views/layouts/home/sections/vision.ejs
+++ b/views/layouts/home/sections/vision.ejs
@@ -12,8 +12,11 @@
         <% if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %> 
         <%= foundDept.description %>
         <% } else if (title === "E-Cell | Home") { %>
-          To develop, support and deliver the entrepreneurship spirit among students 
-          in their quest to achieve success in establishing their venture at all junctures.        <% } %> 
+          The nature of being an entrepreneur means that you fully embrace ambiguity 
+          and are comfortable with being challenged regularly.
+          To develop, support and deliver the entrepreneurship 
+          spirit among students in their quest to achieve success 
+          in establishing their venture at all junctures.        <% } %> 
       </p>
       <!-- <div class="flex ml-7 pt-8 justify-center">
         <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
