--- a/views/layouts/dashboard/sections/member-table.ejs
+++ b/views/layouts/dashboard/sections/member-table.ejs
@@ -21,8 +21,8 @@
                 class="bg-gray-50 dark:bg-gray-800 duration-200 hover:bg-gray-200 dark:hover:bg-gray-900 text-gray-700 dark:text-gray-400">
                 <td class="px-4 py-3">
                   <div class="flex items-center text-sm">
-                    <div class="relative hidden w-8 h-8 mr-3 rounded-full md:block">
-                      <img class="object-fit rounded-full" src="<%= member.profile_pic_url %>" alt=""
+                    <div class="relative hidden w-8 h-8 dark:bg-white bg-gray-800 mr-3 rounded-full md:block">
+                      <img class="object-cover w-8 h-8 rounded-full" src="<%= member.profile_pic_url %>" alt=""
                         loading="lazy" />
                       <div class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true">
                       </div>
